--- a/Csn.OrmEdd.Services/Csn.OrmEdd3b.Services.csproj
+++ b/Csn.OrmEdd.Services/Csn.OrmEdd3b.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4D9DB086-A706-4907-9A17-B970E27DF1EA}</ProjectGuid>
+    <ProjectGuid>{6F5DFDA4-74A8-469F-A113-7C25D0C8B3AD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Csn.OrmEdd.Dal</RootNamespace>
-    <AssemblyName>Csn.OrmEdd.Dal</AssemblyName>
+    <RootNamespace>Csn.OrmEdd.Services</RootNamespace>
+    <AssemblyName>Csn.OrmEdd.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,22 +39,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataMappers\IDataMapper.cs" />
-    <Compile Include="DataMappers\PersonAdoDataMapper.cs" />
+    <Compile Include="IPersonServices.cs" />
+    <Compile Include="PersonServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataMappers\PersonDataMapper.cs" />
-    <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\PersonRepository.cs" />
-    <Compile Include="Repositories\Repository.cs" />
-    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Csn.OrmEdd.Models\Csn.OrmEdd.Models.csproj">
+    <ProjectReference Include="..\Csn.OrmEdd.Dal\Csn.OrmEdd3b.Dal.csproj">
+      <Project>{4d9db086-a706-4907-9a17-b970e27df1ea}</Project>
+      <Name>Csn.OrmEdd3b.Dal</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Csn.OrmEdd.Models\Csn.OrmEdd3b.Models.csproj">
       <Project>{a553c546-69d3-45b4-927b-14a0cb7d4ffa}</Project>
-      <Name>Csn.OrmEdd.Models</Name>
+      <Name>Csn.OrmEdd3b.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
