--- a/Csn.OrmEdd.Dal/Csn.OrmEdd3b.Dal.csproj
+++ b/Csn.OrmEdd.Dal/Csn.OrmEdd3b.Dal.csproj
@@ -55,11 +55,22 @@
     <Compile Include="CsnOrmEdd3bDbContext.cs" />
     <Compile Include="DataMappers\IDataMapper.cs" />
     <Compile Include="DataMappers\PersonAdoDataMapper.cs" />
+    <Compile Include="Migrations\201611031023480_InitialCreate.cs" />
+    <Compile Include="Migrations\201611031023480_InitialCreate.Designer.cs">
+      <DependentUpon>201611031023480_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201611031045048_PersonsPhones.cs" />
+    <Compile Include="Migrations\201611031045048_PersonsPhones.Designer.cs">
+      <DependentUpon>201611031045048_PersonsPhones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataMappers\PersonDataMapper.cs" />
+    <Compile Include="Repositories\GenericEfRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
-    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\GenericFileAdoRepository.cs" />
+    <Compile Include="UnitOfWork\EfUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +82,14 @@
       <Project>{a553c546-69d3-45b4-927b-14a0cb7d4ffa}</Project>
       <Name>Csn.OrmEdd3b.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201611031023480_InitialCreate.resx">
+      <DependentUpon>201611031023480_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611031045048_PersonsPhones.resx">
+      <DependentUpon>201611031045048_PersonsPhones.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
