Adding FileRepository for now the same like AdoRepository

--- a/Csn.OrmEdd.Models/Csn.OrmEdd3b.Models.csproj
+++ b/Csn.OrmEdd.Models/Csn.OrmEdd3b.Models.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IId.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Phone.cs" />
