--- a/Csn.OrmEdd.Dal/Csn.OrmEdd3b.Dal.csproj
+++ b/Csn.OrmEdd.Dal/Csn.OrmEdd3b.Dal.csproj
@@ -67,11 +67,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataMappers\PersonFileDataMapper.cs" />
     <Compile Include="Repositories\GenericEfRepository.cs" />
+    <Compile Include="Repositories\GenericFileRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
     <Compile Include="Repositories\GenericAdoRepository.cs" />
     <Compile Include="UnitOfWork\AdoUnitOfWork.cs" />
     <Compile Include="UnitOfWork\EfUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\FIleUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
