Adding Ms Identity with EF to the Web API project. SO we will be able to use the Context and EF

--- a/Csn.OrmEdd3b.WebApi/Web.config
+++ b/Csn.OrmEdd3b.WebApi/Web.config
@@ -4,6 +4,18 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <!-- We have added the following connectionStrings Start -->
+  <connectionStrings>
+    <add name="CsnOrmEdd3bConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=C:\Users\Stoyan\Source\Repos\Csn.OrmEdd3b\Csn.OrmEdd3b.App\App_Data\CsnOrmEdd3b.mdf;Initial Catalog=CsnOrmEdd3b;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <!-- <add name="CsnOrmEdd3bConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\CsnOrmEdd3b.mdf;Initial Catalog=CsnOrmEdd3b;Integrated Security=True" providerName="System.Data.SqlClient" /> -->
+  <!-- "Cannot attach the file 'C:\\Users\\Stoyan\\Source\\Repos\\Csn.OrmEdd3b\\Csn.OrmEdd3b.WebApi\\App_Data\\CsnOrmEdd3b.mdf' as database 'CsnOrmEdd3b'.",
+      "ExceptionType": "System.Data.SqlClient.SqlException", -->
+  <!-- We have added the following connectionStrings End -->  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -42,8 +54,18 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v13.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
